# public/swagger.json
@@ -418,6 +418,41 @@
 				]
 			}
 		},
+		"/books/{id}/books-collection": {
+			"get": {
+				"operationId": "GetBooksCollectionbyBookId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/BookCollectionDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/authors": {
 			"get": {
 				"operationId": "GetAllAuthors",
